--- a/i.html
+++ b/i.html
@@ -19,6 +19,6 @@
   </head>
   <body>
     <img src="https://mediumpurple.s3.us-east-2.amazonaws.com/doggy.jpg" alt="loss" height="500">
-    <h3>don't you worry, this isn't loss. it's just a good boy.</h3>
+    <h3>don't worry, this isn't loss. it's just a good boy.</h3>
   </body>
 </html>
